# internal/handlers/auth/auth.go
@@ -1,13 +1,13 @@
-package users
+package auth
 
 import (
+	"database/sql"
 	"net/http"
 	"time"
 
 	"github.com/google/uuid"
 	"github.com/lucashthiele/chirpy/internal/auth"
 	"github.com/lucashthiele/chirpy/internal/config"
-	"github.com/lucashthiele/chirpy/internal/database"
 	"github.com/lucashthiele/chirpy/pkg/parser"
 	"github.com/lucashthiele/chirpy/pkg/response"
 )
@@ -24,10 +24,11 @@ type userJSON struct {
 	Email     string    `json:"email"`
 }
 
-func HandleCreateUsers(res http.ResponseWriter, req *http.Request) {
+func HandleLogin(res http.ResponseWriter, req *http.Request) {
 	cfg, err := config.New()
 	if err != nil {
 		response.RespondWithInternalServerError(res, err)
+		return
 	}
 
 	data := &params{}
@@ -35,29 +36,31 @@ func HandleCreateUsers(res http.ResponseWriter, req *http.Request) {
 	err = parser.ParseBody(req.Body, data)
 	if err != nil {
 		response.RespondWithInternalServerError(res, err)
+		return
 	}
 
-	hashedPassword, err := auth.HashPassword(data.Password)
+	user, err := cfg.Db.GetUserByEmail(req.Context(), data.Email)
+	if err == sql.ErrNoRows {
+		response.RespondWithError(res, http.StatusUnauthorized, "Unauthorized")
+		return
+	}
 	if err != nil {
 		response.RespondWithInternalServerError(res, err)
+		return
 	}
 
-	userParams := database.CreateUserParams{
-		Email:          data.Email,
-		HashedPassword: hashedPassword,
-	}
-
-	createdUser, err := cfg.Db.CreateUser(req.Context(), userParams)
+	err = auth.CheckPassword(user.HashedPassword, data.Password)
 	if err != nil {
-		response.RespondWithInternalServerError(res, err)
+		response.RespondWithError(res, http.StatusUnauthorized, "Unauthorized")
+		return
 	}
 
-	userJSON := userJSON{
-		ID:        createdUser.ID,
-		CreatedAt: createdUser.CreatedAt.Time,
-		UpdatedAt: createdUser.UpdatedAt.Time,
-		Email:     createdUser.Email,
+	userResp := userJSON{
+		ID:        user.ID,
+		CreatedAt: user.CreatedAt.Time,
+		UpdatedAt: user.UpdatedAt.Time,
+		Email:     user.Email,
 	}
 
-	response.RespondWithJSON(res, http.StatusCreated, userJSON)
+	response.RespondWithJSON(res, http.StatusOK, userResp)
 }
