# openapi.yaml
@@ -153,6 +153,9 @@ paths:
                 email:
                   type: string
                   description: The user's email
+                password:
+                  type: string
+                  description: The user's password
       responses:
         '201':
           description: User created successfully
@@ -175,6 +178,54 @@ paths:
                     example: "user@example.com"
         '400':
           description: Invalid input
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  error:
+                    type: string
+  /api/login:
+    post:
+      tags:
+        - Login
+      summary: Login
+      description: Login to the app.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  description: The user's email
+                password:
+                  type: string
+                  description: The user's password
+      responses:
+        '200':
+          description: User logged in
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    example: "123e4567-e89b-12d3-a456-426614174000"
+                  created_at:
+                    type: string
+                    example: "2025-05-15T08:19:18.031988Z"
+                  updated_at:
+                    type: string
+                    example: "2025-05-15T08:19:18.031988Z"
+                  email:
+                    type: string
+                    example: "user@example.com"
+        '401':
+          description: Unauthorized
           content:
             application/json:
               schema:
